# PersonalUseScripts

./: .gitattributes  .gitignore  LICENSE.txt  README.md  unpack_Distributives_config.ahk  update.cmd  update.finalize.cmd  update@ADerbenev-L-SPB.cmd  update@AcerPH315-53-71HN.cmd  update@LcD-1151-Home.cmd  update_Distributives_scripts.cmd
BidirectionalSyncViaRsync/: go.mod  go.sum  main.go
Distributives/: .gitignore  descript.ion  sync-filter.txt  sync-to-git-filter.txt  sync_filter.txt  sync_to_git_filter.txt  update_timestamps.cmd
Photo/: Copy photos from flash cards.ahk  Copy photos from flash cards.destinations.txt  Group Photos By Date.ahk  Move files by type when no other types with same name exist.ahk
Total Commander/: dir_path.txt  make_links.cmd
config/: _home.cmd  _office0.cmd  _retail_serviceNote.cmd  _roaming.cmd  update local config-rsyncSrv0.cmd
misc/: !CheckDriveFreeSpaceCompressFiles.ahk  .gitignore  .sync-filter.txt  .utils.cmd  7-max.template.ahk  7z_am.cmd  7z_mm.cmd  AGENTS.md  AOMEI Backupper service manual start.cmd  AddToAppPaths.ahk  AddToNXExclusions.cmd  AntICode_startup.cmd  AppPathBind.ahk  AutohotkeyHelp.ahk  Bloatware.txt  BloatwareSetEfficiencyMode.ahk  Change audio output.ahk  Chrome.ahk  Chrome_Profile_Compactable.txt  Chrome_Profile_Temporary.txt  Chromium.ahk  ClipboardMonitor.ahk  DelayedStart.ahk  (+336 more)
misc/py/json_sync/: .gitignore  LICENSE  README.md  pyproject.toml
misc/py/json_sync/.github/: copilot-instructions.md
misc/py/json_sync/src/json_sync/: __init__.py  cli.py  engine.py
misc/py/json_sync/tests/: test_cli.py
(+2026 files in other folders)
