[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json_sync"
version = "0.0.1"
description = "A JSON sync tool"
readme = "README.md"
authors = [
  { name = "LogicDaemon", email = "logicdaemon@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs",
    "pyyaml",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "mypy",
]

[project.scripts]
json-sync = "json_sync.cli:main"

[project.urls]
"Homepage" = "https://github.com/LogicDaemon/json_sync"
"Bug Tracker" = "https://github.com/LogicDaemon/json_sync/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
]

[tool.pylint.format]
max-line-length = 120
